--- a/SASS/1_composition/_reset.scss
+++ b/SASS/1_composition/_reset.scss
@@ -19,8 +19,8 @@ figure, blockquote, dl, dd {
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role=list],
-ol[role=list] {
+ul[role='list'],
+ol[role='list'] {
   list-style: none;
 }
 
@@ -71,5 +71,3 @@ textarea:not([rows]) {
 :target {
   scroll-margin-block: 5ex;
 }
-
-/*# sourceMappingURL=style.css.map */
