integrated utopia into the project as opposed to a dependency and modified it with my variable naming convention

--- a/SASS/1_composition/_scales.scss
+++ b/SASS/1_composition/_scales.scss
@@ -1,5 +1,4 @@
-@use 'node_modules/utopia-core-scss/src/utopia' as utopia;
-
+@use 'utopia-core-scss-modified/utopia' as utopia;
 
 $minWidth: 320;
 $maxWidth: 1240;
@@ -9,36 +8,49 @@ $maxFontSize: 20;
 $minTypeScale: 1.2;
 $maxTypeScale: 1.25;
 $positiveTypeSteps: 5;
-$negativeTypeSteps: 2;
-$typePrefix: "step-";
+$negativeTypeSteps: 3;
+$typePrefix: 'fs-';
 
-$positiveSpaceSteps: (1.5, 2, 3, 4, 6);
+$positiveSpaceSteps: (1.5, 2, 3);
 $negativeSpaceSteps: (0.75, 0.5, 0.25);
 $customSpaceSizes: ();
-$spacePrefix: "space-";
-
+$spacePrefix: 'space-';
 
 :root {
-  @include utopia.generateTypeScale((
-    "minWidth": $minWidth,
-    "maxWidth": $maxWidth,
-    "minFontSize": $minFontSize,
-    "maxFontSize": $maxFontSize,
-    "minTypeScale": $minTypeScale,
-    "maxTypeScale": $maxTypeScale,
-    "positiveSteps": $positiveTypeSteps,
-    "negativeSteps": $negativeTypeSteps,
-    "prefix": $typePrefix,
-  ));
+  @include utopia.generateTypeScale(
+    (
+      'minWidth': $minWidth,
+      'maxWidth': $maxWidth,
+      'minFontSize': $minFontSize,
+      'maxFontSize': $maxFontSize,
+      'minTypeScale': $minTypeScale,
+      'maxTypeScale': $maxTypeScale,
+      'positiveSteps': $positiveTypeSteps,
+      'negativeSteps': $negativeTypeSteps,
+      'prefix': $typePrefix,
+    )
+  );
 
-  @include utopia.generateSpaceScale((
-    "minWidth": $minWidth,
-    "maxWidth": $maxWidth,
-    "minSize": $minFontSize,
-    "maxSize": $maxFontSize,
-    "positiveSteps": $positiveSpaceSteps,
-    "negativeSteps": $negativeSpaceSteps,
-    "customSizes": $customSpaceSizes,
-    "prefix": $spacePrefix,
-  ));
+  --fw-100: 100;
+  --fw-200: 200;
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+  --fw-800: 800;
+  --fw-900: 900;
+
+  @include utopia.generateSpaceScale(
+    (
+      'minWidth': $minWidth,
+      'maxWidth': $maxWidth,
+      'minSize': $minFontSize,
+      'maxSize': $maxFontSize,
+      'positiveSteps': $positiveSpaceSteps,
+      'negativeSteps': $negativeSpaceSteps,
+      'customSizes': $customSpaceSizes,
+      'prefix': $spacePrefix,
+    )
+  );
 }
