--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,58 @@
+:root {
+  --fs-100: clamp(0.64rem, 0.6549rem + -0.0192vi, 0.651rem);
+  --fs-200: clamp(0.7813rem, 0.7747rem + 0.0326vi, 0.8rem);
+  --fs-300: clamp(0.9375rem, 0.9158rem + 0.1087vi, 1rem);
+  --fs-400: clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);
+  --fs-500: clamp(1.35rem, 1.2761rem + 0.3696vi, 1.5625rem);
+  --fs-600: clamp(1.62rem, 1.5041rem + 0.5793vi, 1.9531rem);
+  --fs-700: clamp(1.944rem, 1.771rem + 0.8651vi, 2.4414rem);
+  --fs-800: clamp(2.3328rem, 2.0827rem + 1.2504vi, 3.0518rem);
+  --fs-900: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
+  --fw-100: 100;
+  --fw-200: 200;
+  --fw-300: 300;
+  --fw-400: 400;
+  --fw-500: 500;
+  --fw-600: 600;
+  --fw-700: 700;
+  --fw-800: 800;
+  --fw-900: 900;
+  --space-100: clamp(0.3125rem, 0.3125rem + 0vi, 0.3125rem);
+  --space-200: clamp(0.5625rem, 0.5408rem + 0.1087vi, 0.625rem);
+  --space-300: clamp(0.875rem, 0.8533rem + 0.1087vi, 0.9375rem);
+  --space-400: clamp(1.125rem, 1.0815rem + 0.2174vi, 1.25rem);
+  --space-500: clamp(1.6875rem, 1.6223rem + 0.3261vi, 1.875rem);
+  --space-600: clamp(2.25rem, 2.163rem + 0.4348vi, 2.5rem);
+  --space-700: clamp(3.375rem, 3.2446rem + 0.6522vi, 3.75rem);
+  --space-100-200: clamp(0.3125rem, 0.2038rem + 0.5435vi, 0.625rem);
+  --space-200-300: clamp(0.5625rem, 0.4321rem + 0.6522vi, 0.9375rem);
+  --space-300-400: clamp(0.875rem, 0.7446rem + 0.6522vi, 1.25rem);
+  --space-400-500: clamp(1.125rem, 0.8641rem + 1.3043vi, 1.875rem);
+  --space-500-600: clamp(1.6875rem, 1.4049rem + 1.413vi, 2.5rem);
+  --space-600-700: clamp(2.25rem, 1.7283rem + 2.6087vi, 3.75rem);
+}
+
+:root {
+  --clr-neutral-100: #ffffff;
+  --clr-neutral-200: #dfdfdf;
+  --clr-neutral-300: #bfbfbf;
+  --clr-neutral-400: #9f9f9f;
+  --clr-neutral-500: #808080;
+  --clr-neutral-600: #606060;
+  --clr-neutral-700: #404040;
+  --clr-neutral-800: #202020;
+  --clr-neutral-900: #000000;
+  --clr-scheme-1: #9356dc;
+  --clr-scheme-2: #003a68;
+  --clr-scheme-3: #89c8fa;
+  --clr-scheme-4: #008766;
+  --clr-scheme-5: #99e2d0;
+  --F3F3F3: #f6f6f6;
+  --EAEAEA: #eaeaea;
+  --7E7E7E: #7e7e7e;
+  --353535: #353535;
+}
+
 /* Box sizing rules */
 *,
 *::before,
@@ -13,33 +68,52 @@ html {
 }
 
 /* Remove default margin in favour of better control in authored CSS */
-body, h1, h2, h3, h4, p,
-figure, blockquote, dl, dd {
-  margin-block-end: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role=list],
-ol[role=list] {
-  list-style: none;
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+figure,
+blockquote,
+dl,
+dd {
+  margin-block: 0;
+  margin-inline: 0;
 }
 
 /* Set core body defaults */
 body {
   min-height: 100vh;
-  line-height: 1.5;
+  font-size: var(--fs-0, 1.125rem);
+  line-height: var(--fs-2, 1.62rem);
 }
 
 /* Set shorter line heights on headings and interactive elements */
-h1, h2, h3, h4,
-button, input, label {
-  line-height: 1.1;
+h1,
+h2,
+h3,
+h4,
+button,
+input,
+label {
+  line-height: var(--fs-0, 1.125rem);
 }
 
 /* Balance text wrapping on headings */
-h1, h2,
-h3, h4 {
+h1,
+h2,
+h3,
+h4 {
   text-wrap: balance;
+}
+
+/* Remove default list styles on lists that have classes on them without raising specificity */
+ul:where(ul[class]),
+ol:where(ol[class]) {
+  margin-block: 0;
+  padding-inline-start: 0;
+  list-style: none;
 }
 
 /* A elements that don't have a class get default styles */
@@ -53,23 +127,48 @@ img,
 picture {
   max-width: 100%;
   display: block;
+  height: auto;
 }
 
 /* Inherit fonts for inputs and buttons */
-input, button,
-textarea, select {
+input,
+button,
+textarea,
+select {
   font-family: inherit;
   font-size: inherit;
 }
 
 /* Make sure textareas without a rows attribute are not tiny */
 textarea:not([rows]) {
-  min-height: 10em;
+  min-height: calc(10 * var(--space-s, 1.125rem));
 }
 
 /* Anything that has been anchored to should have extra scroll margin */
 :target {
-  scroll-margin-block: 5ex;
+  scroll-margin-block: var(--space-l, 2.25rem);
+}
+
+.flow > * + * {
+  margin-block-start: var(--_flow-space, var(--space-400));
+}
+
+.container {
+  margin-block: 0;
+  margin-inline: auto;
+  max-width: var(--container-size, 70rem);
+  padding-inline: var(--_flow-space, var(--space-400));
+}
+
+.card {
+  box-shadow: 0 var(--space-100) var(--space-200) 0 var(--clr-neutral-800);
+  padding: var(--space-400);
+  transition: 0.3s;
+}
+
+/* On hover, add a deeper shadow */
+.card:hover {
+  box-shadow: 0 var(--space-200) var(--space-300) 0 var(--clr-neutral-800);
 }
 
 /*# sourceMappingURL=style.css.map */
