further customizing the defaults

--- a/SASS/1_composition/_colors.scss
+++ b/SASS/1_composition/_colors.scss
@@ -19,8 +19,8 @@
   --clr-scheme-4: #008766;
   --clr-scheme-5: #99e2d0;
 
-  --F3F3F3: #f6f6f6; // 246
-  --EAEAEA: #eaeaea; // 234
-  --7E7E7E: #7e7e7e; // 126
-  --353535: #353535; // 53
+  // --F3F3F3: #f6f6f6; // 246
+  // --EAEAEA: #eaeaea; // 234
+  // --7E7E7E: #7e7e7e; // 126
+  // --353535: #353535; // 53
 }
