--- a/SASS/1_composition/_scales.scss
+++ b/SASS/1_composition/_scales.scss
@@ -11,7 +11,7 @@ $positiveTypeSteps: 5;
 $negativeTypeSteps: 3;
 $typePrefix: 'fs-';
 
-$positiveSpaceSteps: (1.5, 2, 3);
+$positiveSpaceSteps: (1.5, 2, 3, 4, 6);
 $negativeSpaceSteps: (0.75, 0.5, 0.25);
 $customSpaceSizes: ();
 $spacePrefix: 'space-';
