--- a/SASS/2_utility/_wrappings.scss
+++ b/SASS/2_utility/_wrappings.scss
@@ -1,8 +1,11 @@
 .container {
+  // --_container-size in case that there is a need to define a custom container size
+  // --_container-padding in case that there is a need to define a custom container padding
+
   margin-block: 0;
   margin-inline: auto;
-  max-width: var(--container-size, 70rem);
-  padding-inline: var(--_flow-space, var(--space-400));
+  max-width: var(--_container-size, calc(10 * var(--space-900)));
+  padding-inline: var(--_container-padding, var(--space-400));
 }
 
 .card {
