--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,12 +24,16 @@
   --space-500: clamp(1.6875rem, 1.6223rem + 0.3261vi, 1.875rem);
   --space-600: clamp(2.25rem, 2.163rem + 0.4348vi, 2.5rem);
   --space-700: clamp(3.375rem, 3.2446rem + 0.6522vi, 3.75rem);
+  --space-800: clamp(4.5rem, 4.3261rem + 0.8696vi, 5rem);
+  --space-900: clamp(6.75rem, 6.4891rem + 1.3043vi, 7.5rem);
   --space-100-200: clamp(0.3125rem, 0.2038rem + 0.5435vi, 0.625rem);
   --space-200-300: clamp(0.5625rem, 0.4321rem + 0.6522vi, 0.9375rem);
   --space-300-400: clamp(0.875rem, 0.7446rem + 0.6522vi, 1.25rem);
   --space-400-500: clamp(1.125rem, 0.8641rem + 1.3043vi, 1.875rem);
   --space-500-600: clamp(1.6875rem, 1.4049rem + 1.413vi, 2.5rem);
   --space-600-700: clamp(2.25rem, 1.7283rem + 2.6087vi, 3.75rem);
+  --space-700-800: clamp(3.375rem, 2.8098rem + 2.8261vi, 5rem);
+  --space-800-900: clamp(4.5rem, 3.4565rem + 5.2174vi, 7.5rem);
 }
 
 :root {
@@ -47,10 +51,6 @@
   --clr-scheme-3: #89c8fa;
   --clr-scheme-4: #008766;
   --clr-scheme-5: #99e2d0;
-  --F3F3F3: #f6f6f6;
-  --EAEAEA: #eaeaea;
-  --7E7E7E: #7e7e7e;
-  --353535: #353535;
 }
 
 /* Box sizing rules */
@@ -84,9 +84,9 @@ dd {
 
 /* Set core body defaults */
 body {
-  min-height: 100vh;
-  font-size: var(--fs-0, 1.125rem);
-  line-height: var(--fs-2, 1.62rem);
+  min-height: 100svh;
+  font-size: var(--fs-400);
+  line-height: var(--fs-600);
 }
 
 /* Set shorter line heights on headings and interactive elements */
@@ -97,7 +97,7 @@ h4,
 button,
 input,
 label {
-  line-height: var(--fs-0, 1.125rem);
+  line-height: var(--fs-400);
 }
 
 /* Balance text wrapping on headings */
@@ -141,12 +141,12 @@ select {
 
 /* Make sure textareas without a rows attribute are not tiny */
 textarea:not([rows]) {
-  min-height: calc(10 * var(--space-s, 1.125rem));
+  min-height: calc(10 * var(--space-400));
 }
 
 /* Anything that has been anchored to should have extra scroll margin */
 :target {
-  scroll-margin-block: var(--space-l, 2.25rem);
+  scroll-margin-block: var(--space-600);
 }
 
 .flow > * + * {
@@ -156,8 +156,8 @@ textarea:not([rows]) {
 .container {
   margin-block: 0;
   margin-inline: auto;
-  max-width: var(--container-size, 70rem);
-  padding-inline: var(--_flow-space, var(--space-400));
+  max-width: var(--_container-size, calc(10 * var(--space-900)));
+  padding-inline: var(--_container-padding, var(--space-400));
 }
 
 .card {
