configured the color palette and added the site font

--- a/SASS/1_composition/_reset.scss
+++ b/SASS/1_composition/_reset.scss
@@ -30,6 +30,7 @@ dd {
 /* Set core body defaults */
 body {
   min-height: 100svh;
+  font-family: var(--ff-sans);
   font-size: var(--fs-400);
   line-height: var(--fs-600);
 }
