integrated the icon font and added to the reset

--- a/SASS/1_composition/_colors.scss
+++ b/SASS/1_composition/_colors.scss
@@ -20,12 +20,12 @@
   --clr-primary-gradient-400: linear-gradient(
     180deg,
     var(--clr-scheme-1) 0%,
-    --clr-scheme-2 100%
+    var(--clr-scheme-2) 100%
   );
   --clr-primary-gradient-700: linear-gradient(
     0deg,
     var(--clr-scheme-1) 0%,
-    --clr-scheme-2 100%
+    var(--clr-scheme-2) 100%
   );
 
   --clr-accent-400: var(clr-scheme-3);
