--- a/SASS/1_composition/_reset.scss
+++ b/SASS/1_composition/_reset.scss
@@ -1,3 +1,7 @@
+:root {
+  --p-max-width: 65ch;
+}
+
 /* Box sizing rules */
 *,
 *::before,
@@ -10,6 +14,7 @@ html {
   -moz-text-size-adjust: none;
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
+  hanging-punctuation: first last;
 }
 
 /* Remove default margin in favour of better control in authored CSS */
@@ -54,6 +59,14 @@ h4 {
   text-wrap: balance;
 }
 
+/* improve readability with max-width on paragraphs and lists */
+/* prevent orphans in supported browsers */
+p,
+li {
+  max-width: var(--p-max-width, 65ch);
+  text-wrap: pretty;
+}
+
 /* Remove default list styles on lists that have classes on them without raising specificity */
 ul:where(ul[class]),
 ol:where(ol[class]) {
@@ -70,10 +83,14 @@ a:not([class]) {
 
 /* Make images easier to work with */
 img,
-picture {
-  max-width: 100%;
+picture,
+svg,
+video {
   display: block;
+  max-width: 100%;
   height: auto;
+  font-style: italic;
+  shape-margin: var(--space-200);
 }
 
 /* Inherit fonts for inputs and buttons */
