--- a/SASS/1_composition/_scales.scss
+++ b/SASS/1_composition/_scales.scss
@@ -13,10 +13,12 @@ $typePrefix: 'fs-';
 
 $positiveSpaceSteps: (1.5, 2, 3, 4, 6);
 $negativeSpaceSteps: (0.75, 0.5, 0.25);
-$customSpaceSizes: ();
+$customSpaceSizes: ('s-l', '300-500');
 $spacePrefix: 'space-';
 
 :root {
+  --maxWidth: #{$maxWidth}px;
+
   @include utopia.generateTypeScale(
     (
       'minWidth': $minWidth,
