--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 :root {
+  --maxWidth: 1240px;
   --fs-100: clamp(0.64rem, 0.6549rem + -0.0192vi, 0.651rem);
   --fs-200: clamp(0.7813rem, 0.7747rem + 0.0326vi, 0.8rem);
   --fs-300: clamp(0.9375rem, 0.9158rem + 0.1087vi, 1rem);
@@ -34,6 +35,7 @@
   --space-600-700: clamp(2.25rem, 1.7283rem + 2.6087vi, 3.75rem);
   --space-700-800: clamp(3.375rem, 2.8098rem + 2.8261vi, 5rem);
   --space-800-900: clamp(4.5rem, 3.4565rem + 5.2174vi, 7.5rem);
+  --space-300-500: clamp(0.875rem, 0.5272rem + 1.7391vi, 1.875rem);
 }
 
 :root {
@@ -61,15 +63,6 @@
   --clr-accent-700: var(--clr-scheme-1);
   --clr-information-700: var(--clr-scheme-4);
   --clr-information-400: var(clr-scheme-3);
-  --clr-bg-clear: var(--clr-neutral-100);
-  --clr-bg-light: var(--clr-neutral-200);
-  --clr-bg-midtone: var(--clr-neutral-300);
-  --clr-bg-dark: var(--clr-neutral-700);
-  --clr-txt-clear: var(--clr-neutral-900);
-  --clr-txt-radiance: var(--clr-neutral-200);
-  --clr-txt-light: var(--clr-neutral-900);
-  --clr-txt-midtone: var(--clr-neutral-700);
-  --clr-txt-dark: var(--clr-neutral-100);
 }
 
 @font-face {
@@ -198,6 +191,46 @@ textarea:not([rows]) {
   scroll-margin-block: var(--space-600);
 }
 
+.bg-clear {
+  --_clr-bg: var(--clr-neutral-100);
+  --_clr-txt: var(--clr-neutral-900);
+  background-color: var(--_clr-bg);
+  color: var(--_clr-txt);
+}
+
+.bg-radiance {
+  --_clr-txt: var(--clr-neutral-200);
+  background-color: red;
+  color: var(--_clr-txt);
+}
+
+.bg-light {
+  --_clr-bg: var(--clr-neutral-200);
+  --_clr-txt: var(--clr-neutral-900);
+  background-color: var(--_clr-bg);
+  color: var(--_clr-txt);
+}
+
+.bg-midtone {
+  --_clr-bg: var(--clr-neutral-300);
+  --_clr-txt: var(--clr-neutral-700);
+  --_fw: var(--fw-500);
+  background-color: var(--_clr-bg);
+  color: var(--_clr-txt);
+  font-weight: var(--_fw);
+}
+
+.bg-dark {
+  --_clr-bg: var(--clr-neutral-700);
+  --_clr-txt: var(--clr-neutral-100);
+  background-color: var(--_clr-bg);
+  color: var(--_clr-txt);
+}
+
+svg > path {
+  fill: var(--clr-txt, --clr-neutral-900);
+}
+
 [class^=icon-]::before,
 [class*=" icon-"]::before {
   display: inline-block;
@@ -284,23 +317,61 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
 }
 
 .wrapper {
-  width: min(var(--_max-width), 100% - var(--_inline-padding) * 2);
+  --_max-wrapper-width: var(--maxWidth);
+  --_inline-wrapper-padding: var(--space-500);
+  width: min(var(--_max-wrapper-width), 100% - var(--_inline-wrapper-padding) * 2);
   margin-inline: auto;
 }
 
 .card {
-  box-shadow: 0 var(--space-100) var(--space-200) 0 var(--clr-neutral-800);
+  box-shadow: 0 var(--space-100) var(--space-200) 0 var(--clr-neutral-700);
   padding: var(--space-400);
   transition: 0.3s;
 }
 
 /* On hover, add a deeper shadow */
 .card:hover {
-  box-shadow: 0 var(--space-200) var(--space-300) 0 var(--clr-neutral-800);
+  box-shadow: 0 var(--space-200) var(--space-300) 0 var(--clr-neutral-700);
+}
+
+.shadow {
+  box-shadow: 0 var(--space-100) var(--space-100) color-mix(in srgb, var(--_clr-txt, var(--clr-neutral-900)), transparent 75%), 0 calc(var(--space-100) * -1) var(--space-100) color-mix(in srgb, var(--_clr-txt, var(--clr-neutral-900)), transparent 75%);
 }
 
 .hidden {
   display: none;
+}
+
+.main-header {
+  --_inline-wrapper-padding: 0px;
+}
+
+.header-navigation {
+  position: relative;
+}
+
+.header-back-btn {
+  position: absolute;
+  color: var(--clr-neutral-200);
+  font-size: var(--fs-500);
+  top: 50%;
+  transform: translate(0, -50%);
+}
+
+.header-logo {
+  margin-inline: auto;
+  padding-block: var(--space-300-500);
+  width: calc(10 * var(--space-400));
+  justify-self: center;
+}
+
+.location {
+  display: flex;
+  justify-content: center;
+  padding-block: var(--space-300-400);
+}
+.location p::before {
+  margin-inline-end: var(--space-400);
 }
 
 /*# sourceMappingURL=style.css.map */
