--- a/SASS/1_composition/_reset.scss
+++ b/SASS/1_composition/_reset.scss
@@ -37,7 +37,7 @@ body {
   min-height: 100svh;
   font-family: var(--ff-sans);
   font-size: var(--fs-400);
-  line-height: var(--fs-600);
+  line-height: 1.5;
 }
 
 /* Set shorter line heights on headings and interactive elements */
@@ -48,7 +48,7 @@ h4,
 button,
 input,
 label {
-  line-height: var(--fs-400);
+  line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
