--- a/SASS/2_utility/_backgrounds.scss
+++ b/SASS/2_utility/_backgrounds.scss
@@ -1,24 +1,21 @@
+[class^='bg-'],
+[class*=' bg-'] {
+  background-color: var(--_clr-bg, red);
+  color: var(--_clr-txt, red);
+}
+
 .bg-clear {
   --_clr-bg: var(--clr-neutral-100);
   --_clr-txt: var(--clr-neutral-900);
-
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
 }
 
 .bg-radiance {
   --_clr-txt: var(--clr-neutral-200);
-
-  background-color: red;
-  color: var(--_clr-txt);
 }
 
 .bg-light {
   --_clr-bg: var(--clr-neutral-200);
   --_clr-txt: var(--clr-neutral-900);
-
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
 }
 
 .bg-midtone {
@@ -26,15 +23,10 @@
   --_clr-txt: var(--clr-neutral-700);
   --_fw: var(--fw-500);
 
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
   font-weight: var(--_fw);
 }
 
 .bg-dark {
   --_clr-bg: var(--clr-neutral-700);
   --_clr-txt: var(--clr-neutral-100);
-
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
 }
