--- a/SASS/2_utility/_flow.scss
+++ b/SASS/2_utility/_flow.scss
@@ -1,4 +1,66 @@
 .flow > * + * {
-  // --_flow-space in case that there is a need to define a custom space
-  margin-block-start: var(--_flow-space, var(--space-400));
+  // --_flow-gap: var(--space-400);
+
+  margin-block-start: var(--_flow-gap, var(--space-400));
+}
+
+/************
+ * Flow
+ ************/
+
+[class^='flex-'],
+[class*=' flex-'] {
+  // --_flex-gap: var(--space-400);
+
+  display: flex;
+  gap: var(--_flex-gap, var(--space-400));
+}
+
+.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
+/************
+ * Grid 
+ ************/
+
+[class^='grid-'],
+[class*=' grid-'] {
+  // --_grid-gap: var(--space-400);
+
+  display: grid;
+  gap: var(--_grid-gap, var(--space-400));
+}
+
+// creates a grid with even columns
+.grid-even-columns {
+  // --_min-column-width: calc(10 * var(--space-400));
+
+  grid-template-columns: repeat(
+    auto-fit,
+    minmax(
+      min(var(--_min-column-width, calc(10 * var(--space-400))), 100%),
+      1fr
+    )
+  );
+}
+
+// creates a grid that at 50em automatically creates columns for each item
+@media (min-width: 50em) {
+  .grid-auto-flow {
+    grid-auto-flow: column;
+    grid-auto-rows: 1fr;
+  }
+}
+
+// allows to stack a div over an image; the image is set as background-image but in the DOM
+.grid-stack > * {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+}
+
+.grid-stack > img {
+  aspect-ratio: initial;
+  z-index: -1;
 }
