--- a/SASS/2_utility/_wrappings.scss
+++ b/SASS/2_utility/_wrappings.scss
@@ -1,10 +1,10 @@
 .wrapper {
-  --_max-wrapper-width: var(--maxWidth);
-  --_inline-wrapper-padding: var(--space-500);
+  // --_max-wrapper-width: var(--maxWidth);
+  // --_inline-wrapper-padding: var(--space-500);
 
   width: min(
-    var(--_max-wrapper-width),
-    100% - (var(--_inline-wrapper-padding) * 2)
+    var(--_max-wrapper-width, var(--maxWidth)),
+    100% - (var(--_inline-wrapper-padding, var(--space-500)) * 2)
   );
   margin-inline: auto;
 }
@@ -21,16 +21,17 @@
 }
 
 .shadow {
-  box-shadow: 0 var(--space-100) var(--space-100)
+  margin-block-end: var(--space-100);
+  box-shadow: inset 0 calc(var(--space-100) * 1 / 2) calc(var(--space-100) / 2)
       color-mix(
         in srgb,
         var(--_clr-txt, var(--clr-neutral-900)),
-        transparent 75%
+        transparent 25%
       ),
-    0 calc(var(--space-100) * -1) var(--space-100)
+    0 var(--space-100) calc(var(--space-100) / 2)
       color-mix(
         in srgb,
         var(--_clr-txt, var(--clr-neutral-900)),
-        transparent 75%
+        transparent 25%
       );
 }
