--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,15 +9,10 @@
   --fs-700: clamp(1.944rem, 1.771rem + 0.8651vi, 2.4414rem);
   --fs-800: clamp(2.3328rem, 2.0827rem + 1.2504vi, 3.0518rem);
   --fs-900: clamp(2.7994rem, 2.4462rem + 1.7658vi, 3.8147rem);
-  --fw-100: 100;
-  --fw-200: 200;
   --fw-300: 300;
   --fw-400: 400;
   --fw-500: 500;
-  --fw-600: 600;
   --fw-700: 700;
-  --fw-800: 800;
-  --fw-900: 900;
   --space-100: clamp(0.3125rem, 0.3125rem + 0vi, 0.3125rem);
   --space-200: clamp(0.5625rem, 0.5408rem + 0.1087vi, 0.625rem);
   --space-300: clamp(0.875rem, 0.8533rem + 0.1087vi, 0.9375rem);
@@ -116,7 +111,7 @@ body {
   min-height: 100svh;
   font-family: var(--ff-sans);
   font-size: var(--fs-400);
-  line-height: var(--fs-600);
+  line-height: 1.5;
 }
 
 /* Set shorter line heights on headings and interactive elements */
@@ -127,7 +122,7 @@ h4,
 button,
 input,
 label {
-  line-height: var(--fs-400);
+  line-height: 1.1;
 }
 
 /* Balance text wrapping on headings */
@@ -191,44 +186,40 @@ textarea:not([rows]) {
   scroll-margin-block: var(--space-600);
 }
 
+[class^=bg-],
+[class*=" bg-"] {
+  background-color: var(--_clr-bg, red);
+  color: var(--_clr-txt, red);
+}
+
 .bg-clear {
   --_clr-bg: var(--clr-neutral-100);
   --_clr-txt: var(--clr-neutral-900);
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
 }
 
 .bg-radiance {
   --_clr-txt: var(--clr-neutral-200);
-  background-color: red;
-  color: var(--_clr-txt);
 }
 
 .bg-light {
   --_clr-bg: var(--clr-neutral-200);
   --_clr-txt: var(--clr-neutral-900);
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
 }
 
 .bg-midtone {
   --_clr-bg: var(--clr-neutral-300);
   --_clr-txt: var(--clr-neutral-700);
   --_fw: var(--fw-500);
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
   font-weight: var(--_fw);
 }
 
 .bg-dark {
   --_clr-bg: var(--clr-neutral-700);
   --_clr-txt: var(--clr-neutral-100);
-  background-color: var(--_clr-bg);
-  color: var(--_clr-txt);
 }
 
 svg > path {
-  fill: var(--clr-txt, --clr-neutral-900);
+  fill: var(--_clr-txt, --clr-neutral-900);
 }
 
 [class^=icon-]::before,
@@ -313,13 +304,54 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
 }
 
 .flow > * + * {
-  margin-block-start: var(--_flow-space, var(--space-400));
+  margin-block-start: var(--_flow-gap, var(--space-400));
+}
+
+/************
+ * Flow
+ ************/
+[class^=flex-],
+[class*=" flex-"] {
+  display: flex;
+  gap: var(--_flex-gap, var(--space-400));
+}
+
+.flex-center {
+  align-items: center;
+  justify-content: center;
+}
+
+/************
+ * Grid 
+ ************/
+[class^=grid-],
+[class*=" grid-"] {
+  display: grid;
+  gap: var(--_grid-gap, var(--space-400));
+}
+
+.grid-even-columns {
+  grid-template-columns: repeat(auto-fit, minmax(min(var(--_min-column-width, calc(10 * var(--space-400))), 100%), 1fr));
+}
+
+@media (min-width: 50em) {
+  .grid-auto-flow {
+    grid-auto-flow: column;
+    grid-auto-rows: 1fr;
+  }
+}
+.grid-stack > * {
+  grid-column: 1/2;
+  grid-row: 1/2;
+}
+
+.grid-stack > img {
+  aspect-ratio: initial;
+  z-index: -1;
 }
 
 .wrapper {
-  --_max-wrapper-width: var(--maxWidth);
-  --_inline-wrapper-padding: var(--space-500);
-  width: min(var(--_max-wrapper-width), 100% - var(--_inline-wrapper-padding) * 2);
+  width: min(var(--_max-wrapper-width, var(--maxWidth)), 100% - var(--_inline-wrapper-padding, var(--space-500)) * 2);
   margin-inline: auto;
 }
 
@@ -335,11 +367,21 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
 }
 
 .shadow {
-  box-shadow: 0 var(--space-100) var(--space-100) color-mix(in srgb, var(--_clr-txt, var(--clr-neutral-900)), transparent 75%), 0 calc(var(--space-100) * -1) var(--space-100) color-mix(in srgb, var(--_clr-txt, var(--clr-neutral-900)), transparent 75%);
+  margin-block-end: var(--space-100);
+  box-shadow: inset 0 calc(var(--space-100) * 1 / 2) calc(var(--space-100) / 2) color-mix(in srgb, var(--_clr-txt, var(--clr-neutral-900)), transparent 25%), 0 var(--space-100) calc(var(--space-100) / 2) color-mix(in srgb, var(--_clr-txt, var(--clr-neutral-900)), transparent 25%);
 }
 
 .hidden {
   display: none;
+}
+
+.txt-center {
+  text-align: center;
+}
+
+.section-header {
+  font-size: var(--fs-600);
+  font-weight: var(--fw-700);
 }
 
 .main-header {
@@ -366,12 +408,24 @@ input[type=checkbox]:checked + .icon-checkbox-heart::before {
 }
 
 .location {
-  display: flex;
-  justify-content: center;
-  padding-block: var(--space-300-400);
+  font-size: var(--fs-300);
+  padding-block: var(--space-200-300);
 }
 .location p::before {
   margin-inline-end: var(--space-400);
+}
+
+.hero {
+  --_flow-gap: var(--space-500);
+  padding-block: var(--space-600);
+}
+.hero > * {
+  display: block;
+}
+.hero p {
+  font-size: var(--fs-400);
+  font-weight: var(--fw-300);
+  line-height: 1.1;
 }
 
 /*# sourceMappingURL=style.css.map */
