--- a/SASS/1_composition/_reset.scss
+++ b/SASS/1_composition/_reset.scss
@@ -15,6 +15,7 @@ html {
   -webkit-text-size-adjust: none;
   text-size-adjust: none;
   hanging-punctuation: first last;
+  scroll-behavior: smooth;
 }
 
 /* Remove default margin in favour of better control in authored CSS */
