--- a/SASS/2_utility/_wrappings.scss
+++ b/SASS/2_utility/_wrappings.scss
@@ -1,14 +1,3 @@
-.wrapper {
-  // --_max-wrapper-width: var(--maxWidth);
-  // --_inline-wrapper-padding: var(--space-500);
-
-  width: min(
-    var(--_max-wrapper-width, var(--maxWidth)),
-    100% - (var(--_inline-wrapper-padding, var(--space-500)) * 2)
-  );
-  margin-inline: auto;
-}
-
 .card {
   box-shadow: 0 var(--space-100) var(--space-200) 0 var(--clr-neutral-700);
   padding: var(--space-400);
@@ -22,16 +11,18 @@
 
 .shadow {
   margin-block-end: var(--space-100);
-  box-shadow: inset 0 calc(var(--space-100) * 1 / 2) calc(var(--space-100) / 2)
+
+  // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px var(--space-100) var(--space-100) 0px
       color-mix(
         in srgb,
         var(--_clr-txt, var(--clr-neutral-900)),
-        transparent 25%
+        transparent 75%
       ),
-    0 var(--space-100) calc(var(--space-100) / 2)
+    inset 0px calc(var(--space-100) / 2) var(--space-100) 0px
       color-mix(
         in srgb,
         var(--_clr-txt, var(--clr-neutral-900)),
-        transparent 25%
+        transparent 85%
       );
 }
