--- a/SASS/3_block/_header.scss
+++ b/SASS/3_block/_header.scss
@@ -1,8 +1,6 @@
-.main-header {
-  --_inline-wrapper-padding: 0px;
-}
-
 .header-navigation {
+  --_inline-wrapper-padding: 0px;
+
   position: relative;
 }
 
@@ -11,19 +9,20 @@
   color: var(--clr-neutral-200);
   font-size: var(--fs-500);
   top: 50%;
-  transform: translate(0, -50%);
+  transform: translate(var(--space-300-500), -50%);
 }
 
 .header-logo {
   margin-inline: auto;
   padding-block: var(--space-300-500);
-  width: calc(10 * var(--space-400));
-  justify-self: center;
+  width: max-content;
+  font-family: var(--ff-logo);
+  font-size: var(--fs-700);
 }
 
 .location {
-  font-size: var(--fs-300);
   padding-block: var(--space-200-300);
+  font-size: var(--fs-300);
 
   & p::before {
     margin-inline-end: var(--space-400);
