--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -1,4 +1,5 @@
 @use '1_composition/index' as composition;
 @use '2_utility/index' as utility;
-@use '3_block/index' as block;
+@use '3_block/index' as block_global;
+@use '3_block/home/index' as block_home;
 @use '4_exception/index' as exception;
