--- a/SASS/1_composition/_fonts.scss
+++ b/SASS/1_composition/_fonts.scss
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'OCPR02-ohmyfood';
-  src: url('../fonts/OCPR02-ohmyfood.ttf') format('truetype'),
-    url('../fonts/OCPR02-ohmyfood.woff') format('woff');
+  src: url('../fonts/OCPR02-ohmyfood.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: block;
