--- a/SASS/2_utility/_icons.scss
+++ b/SASS/2_utility/_icons.scss
@@ -4,7 +4,7 @@
   color: inherit;
   font-family: var(--ff-icons) !important;
   font-size: inherit;
-  font-weight: var(--fw-regular);
+  font-weight: var(--fw-400);
   line-height: 1;
   speak: never;
   font-style: normal;
@@ -58,6 +58,15 @@
 }
 .icon-circle-check:before {
   content: '\e909';
+}
+.icon-circle-1:before {
+  content: '\e910';
+}
+.icon-circle-2:before {
+  content: '\e911';
+}
+.icon-circle-3:before {
+  content: '\e912';
 }
 
 input[type='checkbox']:not(:checked) + .icon-checkbox-heart::before {
