--- a/SASS/2_utility/_wrappings.scss
+++ b/SASS/2_utility/_wrappings.scss
@@ -10,19 +10,6 @@
 }
 
 .shadow {
-  margin-block-end: var(--space-100);
-
-  // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-  box-shadow: 0px var(--space-100) var(--space-100) 0px
-      color-mix(
-        in srgb,
-        var(--_clr-txt, var(--clr-neutral-900)),
-        transparent 75%
-      ),
-    inset 0px calc(var(--space-100) / 2) var(--space-100) 0px
-      color-mix(
-        in srgb,
-        var(--_clr-txt, var(--clr-neutral-900)),
-        transparent 85%
-      );
+  box-shadow: 0px var(--space-100) var(--space-400) 0px
+    color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
 }
