--- a/SASS/3_block/_common.scss
+++ b/SASS/3_block/_common.scss
@@ -11,7 +11,8 @@
   );
 
   display: inline-block;
-  padding: var(--space-200) var(--space-300);
+  padding-inline: var(--space-400);
+  padding-block: var(--space-300);
   font-size: var(--fs-300);
   font-weight: var(--fw-500);
   color: var(--_clr-txt);
