--- a/SASS/3_block/_header.scss
+++ b/SASS/3_block/_header.scss
@@ -22,7 +22,14 @@
 
 .location {
   padding-block: var(--space-200-300);
+  margin-block-end: calc(var(--space-100) * 0.75);
   font-size: var(--fs-300);
+
+  // box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px var(--space-100) var(--space-100) 0px
+      color-mix(in srgb, var(--clr-neutral-900), transparent 75%),
+    inset 0px calc(var(--space-100) / 2) var(--space-100) 0px
+      color-mix(in srgb, var(--clr-neutral-900), transparent 85%);
 
   & p::before {
     margin-inline-end: var(--space-400);
