--- a/SASS/2_utility/_icons.scss
+++ b/SASS/2_utility/_icons.scss
@@ -74,7 +74,7 @@ input[type='checkbox']:not(:checked) + .icon-checkbox-heart::before {
 }
 input[type='checkbox']:checked + .icon-checkbox-heart::before {
   content: '\e902';
-  background-image: var(--clr-primary-gradient-400);
+  background-image: var(--gradient-primary-400);
   background-clip: text;
   color: transparent;
 }
