removed the fallback from the --ff-logo declaration

--- a/SASS/1_composition/_fonts.scss
+++ b/SASS/1_composition/_fonts.scss
@@ -15,6 +15,6 @@
 
 :root {
   --ff-sans: 'Roboto', sans-serif;
-  --ff-logo: 'Shrikhand', serif;
+  --ff-logo: 'Shrikhand';
   --ff-icons: 'OCPR02-ohmyfood';
 }
